fix: a single card can no longer be too big (empty)

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -84,6 +84,7 @@ a {
 
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 40px;
 }
 
