--- a/src/assets/css/projects.css
+++ b/src/assets/css/projects.css
@@ -10,9 +10,9 @@
 
 .card {
     aspect-ratio: 9/10;
-    max-width: 100%;
     background-color: #fff;
     box-shadow: 0px 0px 10px 3px #d4d4d4;
+    max-width: 500px;
     position: relative;
 }
 
@@ -126,10 +126,6 @@
 }
 
 @media (hover: hover) {
-    .card:hover {
-        bottom: 4px;
-    }
-
     .github-url:hover {
         background-color: var(--theme-color-8);
         cursor: pointer;
